# stat_validation

./: .gitignore  README.md  bulk_processing.py  bulk_profiling.py  create_structure.py  diagnose_table.py  extract_row_counts.py  project_stru.py  pyproject.toml  requirements.txt  rfn_sapisu_tables.csv  rfn_sapisu_tables1.csv  sapisu_tables.csv  setup.py  tables1.csv  zipped_report.py
config/: config.yaml  logging.yaml
dbt_validation_results/: rfn_adcp_202510_20251121_123438.txt  rfn_adr2_202510_20251121_123438.txt  rfn_adr6_202510_20251121_123438.txt  rfn_adrc_202510_20251121_123438.txt  rfn_adrp_202510_20251121_123438.txt  rfn_aufk_202510_20251121_123438.txt  rfn_but000_202510_20251121_123438.txt  rfn_but020_202510_20251121_123438.txt  rfn_but021_fs_202510_20251121_123438.txt  rfn_but0bk_202510_20251121_123438.txt  rfn_but0is_202510_20251121_123438.txt  rfn_crhd_202510_20251121_123438.txt  rfn_crtx_202510_20251121_123438.txt  rfn_dberchu_202510_20251121_123438.txt  rfn_dberchz1_202510_20251121_123438.txt  rfn_dberchz2_202510_20251121_123438.txt  rfn_dberchz3_202510_20251121_123438.txt  rfn_dberchz4_202510_20251121_123438.txt  rfn_dberdl_202510_20251121_123438.txt  rfn_dberdlb_202510_20251121_123438.txt  rfn_dfkkbptaxnum_202510_20251121_123438.txt  rfn_dfkkextdoc2_202510_20251121_123438.txt  rfn_dfkkko_202510_20251121_123438.txt  rfn_dfkklocks_202510_20251121_123438.txt  rfn_dfkkop_202510_20251121_123438.txt  rfn_dfkkpoh_202510_20251121_123438.txt  rfn_dfkkrk_202510_20251121_123438.txt  rfn_dfkkrp_202510_20251121_123438.txt  rfn_dfkkzk_202510_20251121_123438.txt  (+100 more)
(+310 files in other folders)
